force-app/main/default/objects/Test_Group__c/Test_Group__c.object-meta.xml
<CustomObject>
    <label>Test Group</label>
    <nameField>
        <label>Test Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>