force-app/main/default/objects/Test_Group__c/fields/Manager_Group__c.field-meta.xml
<CustomField>
    <fullName>Manager_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager Group</label>
    <referenceTo>Test_Group__c</referenceTo>
    <relationshipLabel>Direct Report Groups</relationshipLabel>
    <relationshipName>Test_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>