force-app/main/default/objects/Test_Group__c/fields/Other_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Other_Permissions__c</fullName>
    <inlineHelpText>What other user-specific permissions are required for this test group? Group membership, checkboxes on the user account, add-on licenses?</inlineHelpText>
    <label>Other Permissions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>