force-app/main/default/objects/Test_Group__c/fields/Permission_Set_s__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_s__c</fullName>
    <inlineHelpText>Which permission sets are assigned to users in this test group?</inlineHelpText>
    <label>Permission Set(s)</label>
    <type>TextArea</type>
</CustomField>