force-app/main/default/objects/Test_Group__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <label>Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>