force-app/main/default/objects/Test_Group__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Test Groups</relationshipLabel>
    <relationshipName>Test_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>