force-app/main/default/objects/Test_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Profile_Name__c</columns>
    <columns>Role_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>